[ACE-120] Prevent Interactive pages from being visible as they fly by when jumping over them

--- a/src/components/InteractiveByPageGroup/style.css
+++ b/src/components/InteractiveByPageGroup/style.css
@@ -12,10 +12,25 @@
 /**
  *  ANIMATION HOOKS
  */
+.exiting-down,
 .initial {
     top: 300vh; /* waaay below viewport */
 }
 
+.entering-up,
+.exiting-up,
+.entering-down,
+.exiting-down,
+.entered {
+    opacity: 1;
+}
+
+.exiting-up,
 .exited {
     top: -300vh; /* waaay above viewport */
+}
+
+.initial,
+.exited {
+    opacity: 0;
 }
